# plausible_knots

./: .gitattributes  .gitignore  README.rst  build_sdist.py  pyproject.toml  setup.py
manifold_src/: make_sqlite_db.py  plausible_knots.sqlite
manifold_src/original_manifold_sources/: plausible_knots.csv.bz2  plausible_knots_19.csv.bz2
python_src/: __init__.py  database.py  test.py  test_with_snappy.py
